<resources>
    <string name="app_name">Google</string>
    <string name="create_your_google_account">Create your Google Account</string>
    <string name="username">Username</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="you_can_use_letters_number_periods"><![CDATA[You can use Letters,number & periods]]></string>
    <string name="use_my_current_email_address_instead">Use my current email address instead</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="use_8_or_more_characters_with_a_mix_of_letters_numbers_symbols"><![CDATA[Use 8 or more characterrs with a mix of letters, numbers & symbols]]></string>
    <string name="show_password">Show Password</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="next">Next</string>
    <string name="gmail_com">\@gmail.com</string>
</resources>