<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="76dp"
        android:layout_height="29dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/google"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/create_your_google_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:hint="@string/first_name"
        app:boxBackgroundColor="@color/material_dynamic_neutral100"
        app:layout_constraintTop_toTopOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/last_name"
        app:boxBackgroundColor="@color/material_dynamic_neutral100"
        app:layout_constraintTop_toTopOf="@+id/text_field1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        app:boxBackgroundColor="@color/material_dynamic_neutral100"
        app:helperText="@string/you_can_use_letters_number_periods"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toTopOf="@+id/text_field2"
        app:suffixText="@string/gmail_com"
        app:suffixTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/use_my_current_email_address_instead"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/text_field3"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:inputType="numberPassword"
        app:boxBackgroundColor="@color/material_dynamic_neutral100"
        app:layout_constraintTop_toTopOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/confirm"
        android:inputType="numberPassword"
        app:boxBackgroundColor="@color/material_dynamic_neutral100"
        app:helperText="@string/use_8_or_more_characters_with_a_mix_of_letters_numbers_symbols"
        app:helperTextEnabled="true"
        app:layout_constraintTop_toTopOf="@+id/text_field7">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/show_password"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/text_field6"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/CheckBox"

        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:text="@string/sign_in_instead"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/next"
            android:textSize="15sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>